chamber/styles/base.css
/*************************/
/* GENERAL COMPONENTS */
/*************************/
* {
  padding: 0;
  margin: 0;
  box-sizing: border-box;
}

html {
  /* font-size: 10px; */
  /* 10px / 16px = 0.625 = 62.5% */
  /* Percentage of user's browser font-size setting */
  font-size: 62.5%;
  overflow-x: hidden;
}

body {
  font-family: 'DM Sans', sans-serif;
  line-height: 1;
  font-weight: 400;
  color: #333333;
  overflow-x: hidden;
}

.container {
  max-width: 120rem;
  margin: 0 auto;
  padding: 0 2rem;
}

.grid {
  display: grid;
  grid-template-columns: 1fr;
  grid-auto-rows: minmax(25rem, auto);
  gap: 1rem;
}

.spotlights .box {
  background: #90ee90;
  padding: 1rem;
  border: 1px solid #9e9e9e;
}

.inner-grid {
  display: grid;
  grid-template-columns: 1fr;
  grid-auto-rows: minmax(15rem, auto);
}


/*************************/
/* HEADER */
/*************************/
.logo {
  height: 4rem;
}

.social-media-icon {
  height: 3rem;
  margin-left: 2rem;
}

.header,
footer {
  display: flex;
  justify-content: space-between;
  align-items: center;
  background-color: #002D13;
}

.header {
  height: 13.6rem;
  padding: 2rem 4.8rem 0 4.8rem;
  margin-bottom: 2rem;
  position: relative;
  flex-wrap: wrap;
}

.date {
  color: #ffffff;
  font-size: 1.6rem;
  margin: 0 auto;
  padding: 1rem;
  background-color: #ffc8008d;
  width: 100%;
  text-align: center;
}

/* Inserting this collapsed row between two flex items will make 
 * the flex item that comes after it break to a new row */
.break {
  flex-basis: 100%;
  height: 0;
}


/*************************/
/* NAVIGATION */
/*************************/
.main-nav {
  flex-grow: 1;
}

.main-nav-list {
  list-style-type: none;
  display: flex;
  justify-content: end;
  gap: 4rem;
  margin-right: 5rem;
}

.main-nav-link:link,
.main-nav-link:visited {
  display: inline-block;
  text-decoration: none;
  color: #ffffff;
  font-weight: 500;
  font-size: 1.8rem;
  transition: all 0.3s;
}

.main-nav-link:hover,
.main-nav-link:active {
  color: #ffc700; 
}

/* MOBILE NAVIGATION */
.icon-mobile-nav {
  height: 4.8rem;
  width: 4.8rem;
  color: #ffffff;
}

.icon-mobile-nav[name="close-outline"] {
  display: none;
}

@media (max-width: 991px) {
  .btn-mobile-nav {
    border: none;
    background: none;
    cursor: pointer;
    display: block;
  }

  .icon-mobile-nav[name="close-outline"] {
    display: none;
  }

  .main-nav {
    background-color:#002D13;
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100vh;
    transform: translateX(100%);
    display: flex;
    align-items: center;
    justify-content: center;
    transition: all .5s ease-in-out;

    /* Hide visually the navigation */
    opacity: 0;
    /* Make it unaccessible to mouse and keyboard */
    /* pointer-events: auto; */
    /* Hide it from screen readers */
    visibility: hidden;
  }

  .nav-open .main-nav {
    opacity: 1;
    /* pointer-events: auto; */
    visibility: visible;
    transform: translateX(0);
  }

  .nav-open .icon-mobile-nav[name="close-outline"] {
    display: block;
  }

  .nav-open .icon-mobile-nav[name="menu-outline"] {
    display: none;
  }

  .main-nav-list {
    flex-direction: column;
    gap: 4.8rem;
    align-items: center;
  }

  .main-nav-link:link,
  .main-nav-link:visited {
    font-size: 3rem;
  }
}


/*************************/
/* MAIN */
/*************************/
.card {
  padding: 2rem 1.5rem;
  border: 1px solid #9e9e9e;
}

.card--bg--purple {
  background-color: #996888;
}

.card--bg--mustard {
  background-color: #e1ad01;
}
.card--bg--palegreen {
  background-color: #73a580;
}

.card--bg--lightgrey {
  background-color: #979595;
}

.card--bg--terracotta {
  background-color: #e2725d;
}

.card-title {
  font-weight: 500;
  font-size: 1.8rem;
  color: #222222;
}

.join {
  display: none;
}

.spotlights div:nth-of-type(3) {
  display: none;
}

/*************************/
/* FOOTER */
/*************************/
footer {
  margin-top: 2rem;
  padding: 4rem 0;
}

.logo-footer {
  height: 8rem;
  margin-right: 1rem;
}

.project-details {
  color: #ffffff;
  font-size: 1.2rem;
  text-align: center;
  line-height: 1.6;
  border-top: 1px solid rgba(255, 255, 255, .3);
  padding-top: 1rem;
}

.chamber-address {
  display: flex;
  align-items: center;
  justify-content:space-between;
  flex-direction: column;
  color: #ffffff;
  line-height: 1.6;
  font-size: 1.5rem;
  padding-bottom: 1.5rem;
  text-align: center;
}

.chamber-contact {
  margin-top: 2rem;
}

.map-link {
  color: #ffc700;
  text-decoration: none;
}

.map-icon {
  font-size: 2.5rem;
  vertical-align: bottom;
  margin-top: 1rem;
}

